--- a/style.css
+++ b/style.css
@@ -19,9 +19,26 @@ body {
   min-height: 100vh;
 }
 header {
-  margin-top: 10px;
+  padding-top: 10px;
   display: flex;
   justify-content: space-evenly;
+}
+main {
+  padding: 30px;
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: center;
+}
+footer {
+  position: absolute;
+  font-size: 10px;
+  bottom: 0;
+  width: 100%;
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 10, 235, 0.308);
 }
 html {
   background-image: repeating-linear-gradient(
