--- a/style.css
+++ b/style.css
@@ -12,14 +12,16 @@ ul {
   display: flex;
   align-items: center;
 }
+
 li {
-  margin: 12px;
+  margin: 10px;
 }
 body {
   min-height: 100vh;
 }
 header {
-  padding-top: 10px;
+  background-color: rgba(0, 0, 0, 0.466);
+  padding: 7px;
   display: flex;
   justify-content: space-evenly;
 }
@@ -38,7 +40,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 10, 235, 0.308);
+  background-color: rgba(0, 0, 0, 0.774);
 }
 html {
   background-image: repeating-linear-gradient(
