--- a/style.css
+++ b/style.css
@@ -42,6 +42,44 @@ footer {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.774);
 }
+
+.faq-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: center;
+  padding: 50px;
+}
+
+.faq-box {
+  margin: 20px;
+  background-color: rgba(40, 13, 66, 0.267);
+  padding: 10px 20px;
+  width: 250px;
+  height: 200px;
+  display: grid;
+  border-radius: 12px;
+  box-shadow: 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+  animation: glow 2s linear infinite;
+}
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+  }
+  50% {
+    box-shadow: 0 0 50px #fff, -10px 0 80px rgba(255, 0, 255, 0.212),
+      10px 0 80px rgba(0, 255, 255, 0.192);
+  }
+
+  100% {
+    box-shadow: 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+  }
+}
+.qestion {
+  color: aliceblue;
+}
+.answer {
+  color: rgb(204, 204, 204);
+}
 html {
   background-image: repeating-linear-gradient(
       0deg,
